--- a/project_devices/.cproject
+++ b/project_devices/.cproject
@@ -78,4 +78,5 @@
 			<resource resourceType="PROJECT" workspacePath="/project_devices"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
